podcasts can show duration (hopempty)